@@ -1,3 +1,9 @@
+globus-gssapi-gsi (1:13.13-1+gt6.@distro@) @distro@; urgency=low
+
+  * Include optional cert chain when importing vhost credentials
+
+ -- Globus Toolkit <support@globus.org>  Fri, 15 Jan 2021 14:59:55 +0000
+
 globus-gssapi-gsi (1:13.12-1+gt6.@distro@) @distro@; urgency=low
 
   * Ensure gsi handshake is complete
